# roarm

./: CHANGELOG.md  INTEGRATION_COMPLETE.md  LEROBOT_TELEOPERATE_WEBRTC.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  WEBRTC_IMPLEMENTATION.md  WEBRTC_LEROBOT_INTEGRATION.md  WEBRTC_QUICKSTART.md  WEBRTC_README.md  point_visualization.html  roarm_test.py
examples/: README.md  basic_control.py  lerobot_teleoperate_with_webrtc.py  record_demos.py  run_policy.py  teleoperation.py  train_policy.py  webrtc_proxy_example.py  webrtc_teleoperation_follower.py  webrtc_teleoperation_leader.py
lerobot_robot_roarm/: .gitignore  CHANGELOG.md  MANIFEST.in  QUICKSTART.md  README.md  SUMMARY.md  __init__.py  config_roarm.py  config_roarm_teleoperator.py  install.sh  processors.py  pyproject.toml  roarm.py  roarm_teleoperator.py
lerobot_robot_roarm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lerobot_robot_roarm/examples/: README.md  basic_control.py
lerobot_robot_roarm/lerobot_robot_roarm/: config_roarm.py  config_roarm_teleoperator.py  roarm_teleoperator.py
lerobot_webrtc/: README.md  __init__.py  pyproject.toml  signaling_server.py  test_direct_webrtc.py  test_integration.py  test_receiver.py  test_sender.py  test_signaling.py  test_simple.py  webrtc_receiver.py  webrtc_sender.py
test/: get_camera_index.py  test_cartesian_dual.py  test_cartesian_line.py  test_cartesian_smooth.py  test_connection.py  test_gemini_robotics_er.py  test_table_circle.py  test_table_circle_dual.py  test_two_robots.py
urdf/: roarm_m3.urdf  roarm_m3_kinematics.urdf
