[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_roarm"
version = "0.1.0"
description = "Roarm robot integration for HuggingFace LeRobot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Roarm Integration Team"}
]
keywords = [
    "robotics",
    "robot-learning",
    "lerobot",
    "roarm",
    "robot-arm",
    "manipulation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "lerobot>=0.4.0",
    "numpy>=1.24.0",
    "roarm-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/lerobot_robot_roarm"
Documentation = "https://github.com/yourusername/lerobot_robot_roarm#readme"
Repository = "https://github.com/yourusername/lerobot_robot_roarm"
Issues = "https://github.com/yourusername/lerobot_robot_roarm/issues"

[tool.setuptools]
packages = ["lerobot_robot_roarm"]

[tool.setuptools.package-data]
lerobot_robot_roarm = ["*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
