[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_webrtc"
version = "0.1.0"
description = "WebRTC transport layer for LeRobot teleoperation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "aiortc>=1.3.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_webrtc*"]
